--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,16 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.btn-hover {
+  outline-style: var(--tw-outline-style);
+  outline-width: 2px;
+  outline-color: var(--color-black);
+  background: white;
+  color:black;
+  &:hover{
+    cursor: pointer;
+    background: black;
+    color: white;
+  }
+}
